// ワールドランキング
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/ranking";

import "google/protobuf/timestamp.proto";

message CommonRankingWorld {
  int64 master_ranking_id = 1;
  string user_id = 2;
  int32 score = 3;
  google.protobuf.Timestamp ranked_at = 5;
}
